--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,24 @@
 body {
-	padding:100px 30px;
+	position:fixed;
+	width:100%;
+	padding-top:100px;
+	height:100%;
 	background:#e9f5ff;
+	overflow:hidden;
+	box-shadow: inset 0px 5px 120px #90b9dc;
 }
 
+.container {
+	
+}
 .container {
 	
 }
 
 .container .jl-whole {
 	position:relative;
+	margin: auto;
+	width: 200px;
 }
 
 .container .jl-whole .jl-head {
@@ -16,7 +26,47 @@ body {
 	height:200px;
 	border:1px solid transparent;
 	position:relative;
-	margin:auto;
+	margin: 0px;
+	z-index:1;
+}
+.container .jl-whole .jl-head.jl-rotate {
+	-webkit-animation-name: spin;
+    -webkit-animation-duration: 14000ms;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+    -moz-animation-name: spin;
+    -moz-animation-duration: 14000ms;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-timing-function: linear;
+    -ms-animation-name: spin;
+    -ms-animation-duration: 14000ms;
+    -ms-animation-iteration-count: infinite;
+    -ms-animation-timing-function: linear;
+    
+    animation-name: spin;
+    animation-duration: 14000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+@-ms-keyframes spin {
+    from { -ms-transform: rotate(0deg); }
+    to { -ms-transform: rotate(360deg); }
+}
+@-moz-keyframes spin {
+    from { -moz-transform: rotate(0deg); }
+    to { -moz-transform: rotate(360deg); }
+}
+@-webkit-keyframes spin {
+    from { -webkit-transform: rotate(0deg); }
+    to { -webkit-transform: rotate(360deg); }
+}
+@keyframes spin {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
 }
 
 .container .jl-whole .jl-head .jl-petal {
@@ -36,38 +86,140 @@ body {
 	top:-75px;
 	content:"";
 }
+.container .jl-whole .jl-head .jl-petal::after {
+	background: rgb(255, 63, 63);
+	width: 85%;
+	height: 85%;
+	left: 1px;
+	top: -18px;
+	content:"";
+	position:absolute;
+	border-radius:100%;
+	box-shadow: 0px 0px 30px rgb(23, 1, 1);
+}
+
+.container .jl-whole .jl-head .jl-petal.jl-petal-1 {
+	-ms-transform: rotate(135deg); /* IE 9 */
+	-webkit-transform: rotate(135deg); /* Chrome, Safari, Opera */
+	transform: rotate(135deg);
+	top: 10px;
+	left: 10px;
+}
+.container .jl-whole .jl-head .jl-petal.jl-petal-2 {
+	top: -15px;
+	-ms-transform: rotate(180deg); /* IE 9 */
+	-webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
+	transform: rotate(180deg);
+}
+.container .jl-whole .jl-head .jl-petal.jl-petal-3 {
+	-ms-transform: rotate(-135deg); /* IE 9 */
+	-webkit-transform: rotate(-135deg); /* Chrome, Safari, Opera */
+	transform: rotate(-135deg);
+	top: 10px;
+	left: -10px;
+}
+.container .jl-whole .jl-head .jl-petal.jl-petal-4 {
+	left: -15px;
+	-ms-transform: rotate(90deg); /* IE 9 */
+	-webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
+	transform: rotate(90deg);
+}
+.container .jl-whole .jl-head .jl-petal.jl-petal-6 {
+	left: 15px;
+	-ms-transform: rotate(-90deg); /* IE 9 */
+	-webkit-transform: rotate(-90deg); /* Chrome, Safari, Opera */
+	transform: rotate(-90deg);
+}
+.container .jl-whole .jl-head .jl-petal.jl-petal-7 {
+	-ms-transform: rotate(45deg); /* IE 9 */
+	-webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
+	transform: rotate(45deg);
+	top: -10px;
+	left: 10px;
+}
+.container .jl-whole .jl-head .jl-petal.jl-petal-8 {
+	top: 15px;
+	-ms-transform: rotate(0deg); /* IE 9 */
+	-webkit-transform: rotate(0deg); /* Chrome, Safari, Opera */
+	transform: rotate(0deg);
+}
+.container .jl-whole .jl-head .jl-petal.jl-petal-9 {
+	-ms-transform: rotate(-45deg); /* IE 9 */
+	-webkit-transform: rotate(-45deg); /* Chrome, Safari, Opera */
+	transform: rotate(-45deg);
+	top: -10px;
+	left: -10px;
+}
+
+
+
 
 .container .jl-whole .jl-head .jl-center {
+	display:inline-block;	
+	width: 60px;
+	height: 60px;	
+}
+.container .jl-whole .jl-head .jl-center:after {
 	background:yellow;
 	display:inline-block;
 	border-radius:100%;
-	width: 60px;
-	height: 60px;
+	width: 90px;
+	height: 90px;
+	z-index: 6;
+	left: 49px;
+	top: 51px;
+	content:'';
+	position:absolute;
+	z-index:2;
+	box-shadow: 1px 1px 15px #b70404, inset 1px 1px 15px #ffde00;
 }
 
-.container .jl-whole .jl-body {	
+.container .jl-whole .jl-body {
 	background:green;
 	width:10px;
-	height:200px;
+	height: 200px;
 	margin:auto;
+	margin-top: -80px;
 	position:relative;
-	
+	z-index:0;
+	border-radius: 20px;
+	left: 1px;
+	box-shadow: inset 0px 0px 5px #003c00;
 }
 
-.container .jl-whole .jl-body .jl-leave {
-	background:green;
+.container .jl-whole .jl-body .jl-leave {	
 	display:inline-block;
 	position:relative;
-	border-radius:100%;
-	width: 60px;
-	height: 60px;
+	top:100px;
+	width: 50px;
+	height: 60px;	
 }
-.container .jl-whole .jl-body .jl-leave::before {
-	border-left:30px solid transparent;
-	border-right:30px solid transparent;
-	border-top:50px solid transparent;
-	border-bottom:50px solid green;
-	position:absolute;
-	top:-75px;
+
+.container .jl-whole .jl-body .jl-leave::after {
+	background: rgb(2, 123, 0);
+	width: 60%;
+	height: 85%;
+	left: 6px;
+	top: -17px;
 	content:"";
+	position:absolute;
+	border-radius: 100%;
+	box-shadow: 0px 1px 1px rgb(0, 0, 0), inset 3px 3px 3px #026d00;
+	-ms-transform: rotate(25deg); /* IE 9 */
+	-webkit-transform: rotate(25deg); /* Chrome, Safari, Opera */
+	transform: rotate(25deg);
+}
+
+.container .jl-whole .jl-body .jl-leave.jl-leave-1 {
+	left: -63px;
+	-ms-transform: rotate(120deg); /* IE 9 */
+	-webkit-transform: rotate(120deg); /* Chrome, Safari, Opera */
+	transform: rotate(120deg);
+}
+.container .jl-whole .jl-body .jl-leave.jl-leave-2 {
+	left: 23px;
+	top:45px;
+	-ms-transform: rotate(-125deg); /* IE 9 */
+	-webkit-transform: rotate(-125deg); /* Chrome, Safari, Opera */
+	transform: rotate(-125deg);
 }
