--- a/css/index.css
+++ b/css/index.css
@@ -13,6 +13,7 @@ body {
 .container::before {
 	margin:auto;
 	content:">‿◠";
+	font-family: Arial, Helvetica, sans-serif;
 	position:relative;
 	left: 3px;
 	top: 123px;
